# logitune

./: .gitignore  CMakeLists.txt  Makefile  README.md  com.logitune.Logitune.yml
.devcontainer/: Dockerfile  devcontainer-fish.fish  devcontainer.json
.github/workflows/: ci.yml  release.yml  (+1 more)
data/: 71-logitune.rules
packaging/: PKGBUILD
scripts/: generate-from-optionsplus.py  package-arch.sh  package-deb.sh  package-rpm.sh  pre-push  release.sh
tests/: CMakeLists.txt  test_app_controller.cpp  test_button_action.cpp  test_button_model.cpp  test_capability_dispatch.cpp  test_descriptor_writer.cpp  test_device_reconnect.cpp  test_device_registry.cpp  test_editor_model.cpp  test_features.cpp  test_json_device.cpp  test_keystroke_parser.cpp  test_main.cpp  test_notification_filtering.cpp  test_profile_apply_behavior.cpp  test_profile_engine.cpp  test_profile_switch_behavior.cpp  test_scroll_features.cpp  test_settings_change_behavior.cpp  test_settings_model.cpp  test_smoke_mocks.cpp  test_thumb_wheel_behavior.cpp  test_tray_manager.cpp  test_wmclass_resolution.cpp
tests/hw/: CMakeLists.txt  HardwareFixture.h  hw_test_main.cpp  test_hw_device.cpp  test_hw_features.cpp  test_hw_settings_readback.cpp  test_hw_sleep_wake.cpp  test_hw_thumbwheel.cpp
tests/qml/: CMakeLists.txt  tst_BatteryChip.qml  tst_ButtonCallout.qml  tst_ButtonsPage.qml  tst_DetailPanel.qml  tst_DeviceView.qml  tst_EasySwitchPage.qml  tst_InfoCallout.qml  tst_LogituneToggle.qml  tst_PointScrollPage.qml  tst_SettingsPage.qml  tst_SideNav.qml  tst_Theme.qml  tst_Toast.qml  tst_qml_main.cpp
(+118 files in other folders)
